kubernetes/helm-charts/k8s-resources/ingress/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /kiali
            pathType: Prefix
            backend:
              service:
                name: kiali
                port:
                  number: 20000
