kubernetes/helm-charts/k8s-resources/ingress/prowlarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: videos
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /prowlarr
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 80
