kubernetes/helm-charts/k8s-resources/ingress/radarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: videos
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /radarr
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 80
