kubernetes/helm-charts/k8s-resources/ingress/transmission-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: videos
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /transmission
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  number: 80
